# SparkEngineer_SwissRe_Test

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: main.py
src/api/: nse_processor.py
src/api_nse/: md4_hash_client.py  nse_processor.py
src/data/: paths.yaml  sample.csv  schemas.yaml
src/data/bronze/: schemas.yaml
src/data/bronze/claim/: bronze_claim.txt
src/data/bronze/contract/: bronze_contract.txt
src/data/bronze/nse_id/: .part-00000-6546c819-047f-4b26-b7c2-e7b8682ba662-c000.snappy.parquet.crc  .part-00000-cc059fce-4716-4c94-a6cc-de3a4fdac599-c000.snappy.parquet.crc  .part-00001-076a2528-43f4-49a0-887a-e97b1855265c-c000.snappy.parquet.crc  .part-00001-54f4c79d-70d0-4656-86b3-a8252a113cc9-c000.snappy.parquet.crc  .part-00001-5b3a84c4-e18d-495f-9fd3-11206b7e39e1-c000.snappy.parquet.crc  .part-00001-6546c819-047f-4b26-b7c2-e7b8682ba662-c000.snappy.parquet.crc  .part-00001-7ea05895-1a25-4c39-b8d8-ae29184c7029-c000.snappy.parquet.crc  .part-00001-af02c886-c5ac-492a-9389-35569b4a052b-c000.snappy.parquet.crc  .part-00001-d77896a2-a650-413d-a6e7-c6e2269a2251-c000.snappy.parquet.crc  .part-00003-54f4c79d-70d0-4656-86b3-a8252a113cc9-c000.snappy.parquet.crc  (+92 more)
src/data/silver/: schemas.yaml
src/functions/: __init__.py  nse_processor.py  utils.py
src/spark_app/: __init__.py  display_data.py  etl.py  main.py  nse_etl.py  nse_pipeline.py  show.py  transactions_file.py  transactions_pipeline.py
tests/: conftest.py  test_etl.py  test_nse_pipelines.py  test_transactions_pipelines.py
(+12 files in other folders)
