[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkengineer_swissre_test_pablosanchez"
version = "0.1.0"
description = "Spark ETL application for Swiss Re technical test"
authors = [{name = "Pablo Sánchez Armas"}]
readme = "README.md"
license = {text = "MIT License"}
dependencies = [
    "pyspark>=3.5.1"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
